syntax = "proto3";
package sg.flow.transaction.v1;

option java_multiple_files  = true;
option java_package         = "sg.flow.transaction.v1";
option java_outer_classname = "TransactionHistoryServiceProto";

import "google/protobuf/timestamp.proto";
import "common/v1/transaction.proto";

service TransactionHistoryService {
  rpc GetLast30DaysHistoryList (GetLast30DaysHistoryListRequest) returns (sg.flow.common.v1.TransactionHistoryList);
  rpc GetMonthlyTransaction    (GetMonthlyTransactionRequest)    returns (sg.flow.common.v1.TransactionHistoryList);
  rpc GetDailyTransaction      (GetDailyTransactionRequest)      returns (sg.flow.common.v1.TransactionHistoryList);
  rpc GetTransactionDetails    (GetTransactionDetailsRequest)    returns (sg.flow.common.v1.TransactionHistoryDetail);
  rpc GetTransactionWithinRange(GetTransactionWithinRangeRequest)returns (sg.flow.common.v1.TransactionHistoryList);
  rpc GetProcessedTransaction  (GetProcessedTransactionRequest)  returns (sg.flow.common.v1.TransactionHistoryList);
  rpc GetRecurringTransaction  (GetRecurringTransactionRequest)  returns (GetRecurringTransactionResponse);
  rpc SetTransactionCategory   (SetTransactionCategoryRequest)   returns (SetTransactionCategoryResponse);
  rpc SetTransactionInclusion  (SetTransactionInclusionRequest)  returns (SetTransactionInclusionResponse);
  rpc GetTransactionForAccount (GetTransactionForAccountRequest) returns (sg.flow.common.v1.TransactionHistoryList);
}

/* ── Requests ── */

message GetLast30DaysHistoryListRequest {}

message GetMonthlyTransactionRequest {
  int32 year  = 1;
  int32 month = 2; // 1-12
}

message GetDailyTransactionRequest {
  int32 year  = 1;
  int32 month = 2;
  int32 day   = 3;
}

message GetTransactionDetailsRequest {
  string transaction_id = 1;
}

message GetTransactionWithinRangeRequest {
  google.protobuf.Timestamp start_timestamp = 1;
  google.protobuf.Timestamp end_timestamp   = 2;
}
message GetProcessedTransactionRequest {
  repeated string transaction_ids = 1;
}

message GetRecurringTransactionRequest {}

message GetRecurringTransactionResponse {
  repeated sg.flow.common.v1.RecurringTransactionDetail recurring_transactions = 1;
  google.protobuf.Timestamp last_updated = 2;
}

message SetTransactionCategoryRequest {
  string transaction_id = 1;
  string category = 2;
}

message SetTransactionCategoryResponse {
  bool success = 1;
  string message = 2;
}

message SetTransactionInclusionRequest {
  string transaction_id = 1;
  bool include_in_spending_or_income = 2;
}

message SetTransactionInclusionResponse {
  bool success = 1;
  string message = 2;
}

message GetTransactionForAccountRequest {
  string account_number = 1;
  string bank_id = 2;
  string oldest_transaction_id = 3; // for pagination, fetch transactions before this id
  int64 limit = 4; // number of transactions to fetch, default 20
}